added basic structure for accordion for restsurants and pubs section

--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
             </div>
         </div>
     </section>
+    <!-- Accordion for restaaurants and pubs-->
     <section id="restaurants">
+        <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Restaurants | Iconic Pubs</span></h2>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
