added a heading for google maps so the html validator does not give me an error

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>About Dublin</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>About Dublin</span></h2>
                     <p>Dublin, the capital city of Ireland is situated on a bay on the east coast, at the mouth of the
                         River Liffey, it lies within the province of Leinster. It is bordered on the south by the Dublin
                         Mountains, a part of the Wicklow Mountains range. Dublin is booming with tech giants calling the
@@ -81,9 +80,10 @@
     <!-- Maps -->
     <section id="map1">
         <div class="container">
+            <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Google Maps</span></h2>
             <div class="row mt-4 mb-4">
                 <div id="city" class="col-sm-6">
-                    <button id="attractions" type="button" class="btn btn-danger btn-lg btn-block">City Center
+                    <button id="attractions" type="button" class="btn btn-primary btn-lg btn-block">City Center
                         Attractions</button>
                 </div>
                 <div id="outdoor" class="col-sm-6">
