added block-under-image class to move content in carousel between the image and the content so its viewable on small devices and responsive on other devices

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="assets/images/trinity.jpg" alt="trinity college">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Trinity College Dublin</h5>
                             <p>Visit this esteemed research university and the home of the Book of Kells, the sole
                                 constituent college of the University of Dublin.</p>
@@ -142,41 +143,36 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/botanic-glasnevin.jpg" alt="glasnevin cemetary">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Glasnevin Cemetary</h5>
-                            <p>Kill two birds with one stone and visit the National Botanic Gardens and Glasnevin
-                                Cemetery which opened in 1832. It holds the graves and memorials of several notable
-                                figures who have helped shaped Irish history and culture, including Michael Collins,
-                                Luke Kelly and Daniel O'Connell. Finish your day trip off by visiting one of Ireland
-                                most traditional pubs Gravediggers, located at the rear of the cemetery. .</p>
+                            <p>Opened in 1832, it holds the graves and memorials of several notable
+                                figures who have helped shaped Irish history and culture.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/temple-bar.jpg" alt="Temple Bar">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Temple Bar</h5>
-                            <p>Temple Bar is an area on the south bank of the River Liffey in central Dublin, Ireland.
-                                The area is bounded by the Liffey to the north, Dame Street to the south, Westmoreland
-                                Street to the east and Fishamble Street to the west. It is promoted as Dublin's
-                                'cultural quarter' and, as a centre of Dublin's city centre's nightlife, is a tourist
-                                destination. </p>
+                            <p>Temple Bar is located opposite the River Liffey in central Dublin.
+                                It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife. </p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/castle-dublin.jpg" alt="Dublin Castle">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Dublin Castle</h5>
-                            <p>Erected in the early thirteenth century on the site of a Viking settlement, Dublin Castle
-                                served for centuries as the headquarters of English, and later British, administration
-                                in Ireland. In 1922, following Ireland’s independence, Dublin Castle was handed over to
-                                the new Irish government. It is now a major government complex and a key tourist
+                            <p>Erected in the early thirteenth century on the site of a Viking settlement. It is now a major government complex and a key tourist
                                 attraction.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/guinness-compressed.jpg"
+                        <img class="d-block w-100" src="assets/images/guinness-pic-1.jpg"
                             alt="Guinness Storehouse">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Guinness Storehouse</h5>
                             <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin,
                                 Ireland. Since opening in 2000, it has received over twenty million visitors</p>
@@ -373,27 +369,26 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="assets/images/phoenix-park.jpg" alt="Phoenix park">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <img class="d-block w-100" src="assets/images/phoenix-park-1.jpg" alt="Phoenix park">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Phoenix Park</h5>
                             <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe.
-                                The Phoenix Park is open 24 hrs a day, 7 days a week, all year round. The main gates
-                                of the Park at Parkgate Street and Castleknock Gate are open 24 hours.</p>
+                               The main gates of the Park are open 24 hours.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>  
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Howth</h5>
-                            <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs, Dublin
-                                Bay, Howth Harbour and an almost aerial view of both the Baily Lighthouse and Howth
-                                Harbour Lighthouse. Pubs and restaurants for a break in the middle of the walking
-                                route, as well as at the end.</p>
+                            <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/poolbeg-lighthouse.jpg" alt="Poolbeg Lighthouse">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Poolbeg Lighthouse</h5>
                             <p>The Poolbeg Lighthouse Walk is a gorgeous coastal walk that’ll blow off the thickest
                                 of cobwebs.</p>
@@ -402,11 +397,11 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/botanic-greenhouse.jpg"
                             alt="National Botanic Gardens">
-                        <div class="carousel-caption d-none d-md-block text-white bg-info">
+                        <p class="block-under-image"></p>
+                        <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>National Botanic Gardens</h5>
                             <p>Ireland's premier garden is a green oasis situated in the leafy suburb of Glasnevin,
-                                not far from Dublin city centre. It is just under 50 acres in size and home to over
-                                17,000 different plant species. Famous for its Victorian glasshouse</p>
+                                not far from Dublin city centre.</p>
                         </div>
                     </div>
                 </div>
