moved script files to bottom of the page to get rid of errors in html validator and deleted type=text/javascript to remove other errors

--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
     <title>Discover Dublin</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("user_D3rLRDlbOw6xlZ2B42VNB");
-        })();
-    </script>
 </head>
 
 <body>
@@ -435,6 +429,12 @@
         </div>
     </section>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+<script>
+    (function () {
+        emailjs.init("user_D3rLRDlbOw6xlZ2B42VNB");
+    })();
+</script>
 <script src="assets/js/sendEmail.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -447,7 +447,6 @@
     crossorigin="anonymous"></script>
 <script src="assets/js/maps.js"></script>
 <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap"
-    type="text/javascript"></script>
-
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap">
+</script>
 </html>
