final final commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
@@ -93,12 +93,10 @@
             <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Google Maps</span></h2>
             <div class="row mt-4 mb-4">
                 <div id="city" class="col-sm-6">
-                    <button id="attractions" type="button" class="btn btn-primary btn-lg btn-block">City Center
-                        Attractions</button>
+                    <button id="attractions" type="button" class="btn btn-primary btn-lg btn-block">City Center Attractions</button>
                 </div>
                 <div id="outdoor" class="col-sm-6">
-                    <button id="outdoors" type="button" class="btn btn-primary btn-lg btn-block">Outdoor
-                        Activies</button>
+                    <button id="outdoors" type="button" class="btn btn-primary btn-lg btn-block">Outdoor Activies</button>
                 </div>
             </div>
             <div id="map"></div>
@@ -109,8 +107,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>City Center Attractions</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>City Center Attractions</span></h2>
                 </div>
             </div>
         </div>
@@ -130,8 +127,7 @@
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Trinity College Dublin</h5>
-                            <p>Visit this esteemed research university and the home of the Book of Kells, the sole
-                                constituent college of the University of Dublin.</p>
+                            <p>Visit this esteemed research university and the home of the Book of Kells, the sole constituent college of the University of Dublin.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -139,8 +135,7 @@
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Glasnevin Cemetary</h5>
-                            <p>Opened in 1832, it holds the graves and memorials of several notable
-                                figures who have helped shaped Irish history and culture.</p>
+                            <p>Opened in 1832, it holds the graves and memorials of several notable figures who have helped shaped Irish history and culture.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -148,8 +143,7 @@
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Temple Bar</h5>
-                            <p>Temple Bar is located opposite the River Liffey in central Dublin.
-                                It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife. </p>
+                            <p>Temple Bar is located opposite the River Liffey in central Dublin. It is promoted as Dublin's 'cultural quarter' and, as a centre of Dublin's city centre's nightlife. </p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -157,18 +151,15 @@
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Dublin Castle</h5>
-                            <p>Erected in the early thirteenth century on the site of a Viking settlement. It is now a major government complex and a key tourist
-                                attraction.</p>
+                            <p>Erected in the early thirteenth century on the site of a Viking settlement. It is now a major government complex and a key tourist attraction.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="assets/images/guinness-pic-1.jpg"
-                            alt="Guinness Storehouse">
+                        <img class="d-block w-100" src="assets/images/guinness-pic-1.jpg" alt="Guinness Storehouse">
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Guinness Storehouse</h5>
-                            <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin,
-                                Ireland. Since opening in 2000, it has received over twenty million visitors</p>
+                            <p>Guinness Storehouse is a tourist attraction at St. James's Gate Brewery in Dublin, Ireland. Since opening in 2000, it has received over twenty million visitors</p>
                         </div>
                     </div>
                 </div>
@@ -185,8 +176,7 @@
     </section>
     <!-- Accordion for restaaurants and pubs-->
     <section id="restaurants">
-        <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Restaurants
-                | Iconic Pubs</span></h2>
+        <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Restaurants | Iconic Pubs</span></h2>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -247,7 +237,7 @@
                                             <tr>
                                                 <th scope="row">Chapter One</th>
                                                 <td>Irish/Seasonal</td>
-                                               <td><i class="fas fa-not-equal"></i></td>
+                                                <td><i class="fas fa-not-equal"></i></td>
                                                 <td><i class="fas fa-star"></i></td>
                                             </tr>
                                             <tr>
@@ -322,7 +312,7 @@
                                             <tr>
                                                 <th scope="row"> Kehoe's</th>
                                                 <td><i class="fas fa-star"></i></td>
-                                               <td>9 Anne St S, Dublin,</td>
+                                                <td>9 Anne St S, Dublin,</td>
                                                 <td><i class="fas fa-star"></i></td>
                                             </tr>
                                             <tr>
@@ -346,18 +336,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h2 class="heading resize-font"><span class="content-border-style"><i
-                                class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
+                    <h2 class="heading resize-font"><span class="content-border-style"><i class="fas fa-info-circle"></i>Outdoor Activities</span></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
                     <div class="d-flex justify-content-center">
+                        <!--https://stackoverflow.com/questions/34163516/make-button-act-as-span-in-bootstrap-->
                         <span id="weather-temp"></span>
                         <span id="weather-icon"></span>
                         <span style="margin-right:10px" onclick="refreshWeather();"><i class="fas fa-redo"></i></span>
                     </div>
-                </div>    
+                </div>
             </div>
         </div>
         <!-- Carousel for outdoor activities-->
@@ -375,13 +365,12 @@
                         <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Phoenix Park</h5>
-                            <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe.
-                               The main gates of the Park are open 24 hours.</p>
+                            <p>The Phoenix Park is the largest enclosed public park in any capital city in Europe. The main gates of the Park are open 24 hours.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="assets/images/howth.jpg" alt="Howth">
-                        <p class="block-under-image"></p>  
+                        <p class="block-under-image"></p>
                         <div class="carousel-caption d-md-block text-white bg-info">
                             <h5>Howth</h5>
                             <p>Fresh sea breezes most days. Great views of the rugged coastline and cliffs.</p>
@@ -456,7 +445,7 @@
     <script src="assets/js/weather.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cv-K3Rbf6wNdZS1pnvjfmUzUAegVDO8&callback=initMap">
-    </script>
+        </script>
 </body>
 
 </html>
